--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,3 +4,6 @@
 @import "layout/general";
 @import "components/intro";
 @import "components/navbar";
+@import "components/about-me";
+@import "components/skills";
+@import "components/skills-card";
