--- a/src/styles/components/intro.scss
+++ b/src/styles/components/intro.scss
@@ -1,9 +1,3 @@
-.intro-section {
-  height: 100vh;
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
-}
-
 .intro {
   height: 100%;
   position: static;
@@ -38,7 +32,7 @@
   &_header_letter:hover {
     font-size: 7rem;
     color: $blue-color !important;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    text-shadow: -1px 0 $typography-color, 0 1px $typography-color, 1px 0 $typography-color, 0 -1px $typography-color;
 
     @include max-break($tablet-break) {
       font-size: 3rem;
@@ -51,11 +45,59 @@
     font-weight: 600;
     animation-duration: .6s;
     display: inline-block;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    text-shadow: -1px 0 $typography-color, 0 1px $typography-color, 1px 0 $typography-color, 0 -1px $typography-color;
   }
 
   &_header_letter-main:hover {
     animation-name: rubberBand;
+  }
+
+  &_contact-button {
+    width: max-content;
+    font-size: 1.5rem;
+    background-color: #ffffff;
+    padding: .7rem 1.4rem .5rem;
+    border: 1px solid $accent-color;
+    border-radius: 4px;
+    color: $accent-color;
+    cursor: pointer;
+    letter-spacing: 1px;
+    transition: all 0.4s ease-out 0s;
+    display: inline-block;
+    margin-top: 20px;
+    transform: perspective(1px) translateZ(0);
+
+    &:hover, &:focus {
+      color: $typography-color;
+      border: 1px solid $pink-color;
+    }
+    &:active {
+      transform: translateY(3px);
+    }
+
+    &:before {
+      content: "";
+      position: absolute;
+      z-index: -1;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: $pink-color;
+      -webkit-transform: scaleX(0);
+      transform: scaleX(0);
+      -webkit-transform-origin: 0 50%;
+      transform-origin: 0 50%;
+      -webkit-transition-property: transform;
+      transition-property: transform;
+      -webkit-transition-duration: 0.3s;
+      transition-duration: 0.3s;
+      -webkit-transition-timing-function: ease-out;
+      transition-timing-function: ease-out;
+    }
+    &:hover::before, &:focus::before {
+      transform: scaleX(1);
+    }
   }
 
   @keyframes wave-animation {
@@ -96,26 +138,6 @@
 
     to {
       transform: scale3d(1, 1, 1);
-    }
-  }
-
-  &_contact-button {
-    width: max-content;
-    font-size: 1.5rem;
-    background-color: #ffffff;
-    padding: .7rem 1.4rem .5rem;
-    border: 1px solid $accent-color;
-    border-radius: 4px;
-    color: $accent-color;
-    cursor: pointer;
-    letter-spacing: 1px;
-    transition: all 0.4s ease-out 0s;
-    display: inline-block;
-    margin-top: 20px;
-
-    &:hover, &:focus {
-      color: $pink-color;
-      border: 1px solid $pink-color;
     }
   }
 }
