--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,13 +1,17 @@
 $background_color: #fffcfc;
 $main_text-color: #1d1d1d;
-$accent-color: #0883fd;
 $pink-color: #ff7474;
 $pink-light-color: #ffd7d7;
+
 $blue-color: #6ad1f3;
+$blue-light-color: #aae3ff;
+$accent-color: #0883fd;
+$typography-color: #3d3d3d;
+
 
 $main-font: 'Roboto', sans-serif;
 
-$menu_width: 6rem;
+$menu_width: 5rem;
 
 $mobile-break: 425px;
 $tablet-break: 767px;
