--- a/src/styles/components/intro.scss
+++ b/src/styles/components/intro.scss
@@ -1,3 +1,9 @@
+.intro-section {
+  background: linear-gradient(-45deg, #fdf1ed, #fceef4, #eef7fd, #eefcf6);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+}
+
 .intro {
   height: 100%;
   position: static;
@@ -55,7 +61,7 @@
   &_contact-button {
     width: max-content;
     font-size: 1.5rem;
-    background-color: #ffffff;
+    background-color: transparent;
     padding: .7rem 1.4rem .5rem;
     border: 1px solid $accent-color;
     border-radius: 4px;
@@ -139,5 +145,17 @@
     to {
       transform: scale3d(1, 1, 1);
     }
+  }
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
