--- a/src/styles/components/skills.scss
+++ b/src/styles/components/skills.scss
@@ -28,7 +28,7 @@
     padding-top: 50px;
     margin: 0 auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
 
     @include max-break($tablet-break) {
