--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,3 +7,5 @@
 @import "components/about-me";
 @import "components/skills";
 @import "components/skills-card";
+@import "components/portfolio";
+@import "components/contacts";
