--- a/src/styles/components/contacts.scss
+++ b/src/styles/components/contacts.scss
@@ -27,26 +27,24 @@
     display: flex;
     margin-top: 30px;
     justify-content: center;
+    flex-wrap: wrap;
+    gap: 1rem;
   }
 
   &-card {
-    width: 15%;
-    height: 100px;
-    //border: 1px solid $typography-color;
-    padding: 20px 20px;
-    border-radius: 10px;
+    width: auto;
     display: flex;
-    gap: 15px;
+    gap: 0.8rem;
     transition: all .3s ease-in-out;
     margin: 10px;
 
     &_logo {
-      width: 55px;
-      height: 100%;
+      width: 40px;
+      height: 40px;
     }
 
     &_title {
-      font-size: 20px;
+      font-size: 1.2rem;
       line-height: 16px;
       margin: auto 0;
     }
