--- a/src/styles/components/skills-card.scss
+++ b/src/styles/components/skills-card.scss
@@ -1,16 +1,15 @@
 .skills-card {
-  width: 100%;
-  max-width: 16rem;
+  width: 70%;
   padding: 1rem;
   margin: .5rem;
   display: flex;
   flex-direction: column;
   border-radius: 40px;
-  background-color: $pink-light-color;
-  border: 1px solid $typography-color;
 
   @include max-break($tablet-break) {
+    width: 100%;
     margin: 10px auto;
+    padding: 0;
   }
 
   &_title {
@@ -21,34 +20,42 @@
 
   &_list {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     flex-wrap: wrap;
     list-style: none;
     padding-left: 0;
 
     &_item {
-      background-color: $pink-light-color;
-      width: 100%;
       max-width: 6rem;
       display: flex;
       padding: .8rem;
-      margin-bottom: .5rem;
       align-items: center;
       flex-direction: column;
       flex-wrap: nowrap;
-      border-radius: 20px;
-      border: 1px solid $typography-color;
+      border-radius: 50%;
       box-sizing: border-box;
+      border: 0;
+      width: auto;
+      margin: 0;
 
       img {
-        width: 2rem;
-        height: 2rem;
+        width: 3rem;
+        height: 3rem;
         margin-bottom: .7rem;
+
+        @include max-break($tablet-break) {
+          width: 2rem;
+          height: 2rem;
+        }
       }
 
       p {
         font-size: .8rem;
       }
+    }
+
+    @include max-break($tablet-break) {
+      justify-content: center;
     }
   }
 }
