added font and heading

--- a/src/styles/layout/general.scss
+++ b/src/styles/layout/general.scss
@@ -25,7 +25,7 @@ code {
 
 .container {
     background-color: $background_color;
-    color: $main_text-color;
+    color: $typography-color;
     padding-left: $menu_width;
     display: block;
     min-width: 320px;
