--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,15 +1,13 @@
 $background_color: #fffcfc;
-$main_text-color: #1d1d1d;
 $pink-color: #ff7474;
 $pink-light-color: #ffd7d7;
-
 $blue-color: #6ad1f3;
 $blue-light-color: #aae3ff;
 $accent-color: #0883fd;
 $typography-color: #3d3d3d;
 
-
-$main-font: 'Roboto', sans-serif;
+$main-font: 'OpenSans', sans-serif;
+$intro-font: 'Inconsolata', sans-serif;
 
 $menu_width: 5rem;
 
