--- a/src/styles/components/portfolio.scss
+++ b/src/styles/components/portfolio.scss
@@ -1,9 +1,9 @@
 .portfolio-section {
   //background-color: $background_color;
+  height: fit-content;
   background-image: linear-gradient(to bottom, $pink-light-color, $background_color);
 
   @include max-break($tablet-break) {
-    height: fit-content;
     padding: 50px;
   }
 }
@@ -21,56 +21,74 @@
     text-shadow: -1px 0 $typography-color, 0 1px $typography-color, 1px 0 $typography-color, 0 -1px $typography-color;
   }
 
+  &-desc {
+    margin-top: 10px;
+    font-size: 1.3rem;
+    opacity: 75%;
+  }
+
   &-content {
     margin-top: 50px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .project-cards {
+    display: flex;
+    flex-direction: column;
+    width: 70rem;
   }
 }
 
-.project-cards {
+.card-item {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 100%;
+  flex-direction: row;
+  gap: 50px;
+  margin-bottom: 70px;
+  align-content: start;
 
-  &_item {
-    width: 25%;
-    height: 15rem;
-    position: relative;
-    background-color: white;
+  @include max-break($tablet-break) {
+    gap: 1rem;
+    flex-direction: column !important;
+  }
 
-    &_img {
+  &-img {
+    max-height: 16rem;
+    max-width: 50%;
+    margin: auto;
+
+    @include max-break($tablet-break) {
+      max-width: 100%;
       width: 100%;
-      height: 100%;
-      object-fit: cover;
-      opacity: 1;
-      display: block;
-      transition: .5s ease;
-      backface-visibility: hidden;
     }
+  }
 
-    &_description {
-      transition: .5s ease;
-      opacity: 0;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-      text-align: center;
+  &-desc {
+    &_title {
+      font-size: 3rem;
+      font-family: $intro-font;
+      transition: all .1s ease-in-out;
 
-      h1 {
+      @include max-break($tablet-break) {
         font-size: 2rem;
-        letter-spacing: 2px;
-        line-height: 100%;
+      }
+
+      svg {
+        height: 3rem;
+        width: 3rem;
+        margin-bottom: -10px;
       }
     }
 
-    &:hover &_img {
-      opacity: 0.3;
-    }
-    &:hover &_description {
-      opacity: 1;
+    &_title:hover {
+      color: $blue-color;
+      text-decoration: underline;
+
+      svg {
+        height: 3rem;
+        width: 3rem;
+        margin-bottom: -10px;
+      }
     }
   }
 }
