--- a/src/styles/components/skills-card.scss
+++ b/src/styles/components/skills-card.scss
@@ -39,7 +39,7 @@
       margin: 0;
 
       img {
-        width: 3rem;
+        width: auto;
         height: 3rem;
         margin-bottom: .7rem;
 
