--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,3 +9,4 @@
 @import "components/skills-card";
 @import "components/portfolio";
 @import "components/contacts";
+@import "components/language-change";
