--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,11 +5,12 @@ $blue-color: #6ad1f3;
 $blue-light-color: #aae3ff;
 $accent-color: #0883fd;
 $typography-color: #3d3d3d;
+$shadow-color: #727272;
 
-$main-font: 'OpenSans', sans-serif;
+$main-font: 'NTSomic', 'Open Sans', sans-serif;
 $intro-font: 'Inconsolata', sans-serif;
 
 $menu_width: 5rem;
 
 $mobile-break: 500px;
-$tablet-break: 768px;
+$tablet-break: 1004px;
