--- a/src/styles/layout/general.scss
+++ b/src/styles/layout/general.scss
@@ -12,7 +12,7 @@ html {
 
 body {
     margin: 0;
-    font-family: 'OpenSans', 'Roboto', sans-serif;
+    font-family: $main-font;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: $background_color;
