--- a/src/styles/components/portfolio.scss
+++ b/src/styles/components/portfolio.scss
@@ -21,6 +21,7 @@
   }
 
   &-title {
+    white-space: nowrap;
     color: $blue-color;
     text-shadow: -1px 0 $typography-color, 0 1px $typography-color, 1px 0 $typography-color, 0 -1px $typography-color;
   }
