fix: updated link and photo

--- a/src/styles/components/about-me.scss
+++ b/src/styles/components/about-me.scss
@@ -67,6 +67,7 @@
       height: 300px;
       order: 1;
       margin-top: 20px;
+      margin-right: 0;
     }
 
     //@include max-break($mobile-break) {
