--- a/src/styles/components/intro.scss
+++ b/src/styles/components/intro.scss
@@ -1,5 +1,5 @@
 .intro-section {
-  background-image: linear-gradient(to bottom, $background_color, $background_color);
+  //background-image: linear-gradient(to bottom, $background_color, $background_color);
 }
 
 .intro {
