--- a/src/styles/components/skills.scss
+++ b/src/styles/components/skills.scss
@@ -1,5 +1,5 @@
 .skills-section {
-  background-image: linear-gradient(to bottom, $blue-light-color, $pink-light-color);
+  //background-image: linear-gradient(to bottom, $blue-light-color, $pink-light-color);
   height: fit-content;
 
   @include max-break($tablet-break) {
